--- a/A1Evo_MJ_Custom.html
+++ b/A1Evo_MJ_Custom.html
@@ -9545,23 +9545,33 @@ zip.file("_micCal.txt", micCal);
       const meanOfSquares = sumOfSquares / arrayLength;
       return Math.sqrt(meanOfSquares);
     }
-    async function getTrim(idx, start, end, smoothing="Psy") {
+    async function getTrim(idx, start, end) {
       const targetArray = response2array(targetResponse, start, end);
       const targetSPL = targetArray.reduce((acc, val) => acc + val, 0) / targetArray.length;
-      const freqResponse = await fetchSafe(`frequency-response?smoothing=${smoothing}&ppo=96`, idx);
+      const freqResponse = await fetchSafe('frequency-response?smoothing=Psy&ppo=96', idx);
       const freqArray = response2array(freqResponse, start, end);
       const freqSPL = freqArray.reduce((acc, val) => acc + val, 0) / freqArray.length;
       const offset = targetSPL - freqSPL;
       return Math.round(offset * 2) / 2; // round to nearest 0.5
     }
     async function getTrimOfFinalSub(idx) {
-      // find response bandwidth and use it for determining trim
-      // limit to 20-120hz so peaks outside 20-120hz doesn't lower bass
-      // use less smoothing so it does a dynamic bass fill
-      const initialTrim = await getTrim(idx, 30, 80);
-      const startFreq = Math.round(await getLow3dBPoint(idx, 20, 120, initialTrim));
-      const endFreq = Math.round(await getHigh3dBPoint(idx, 20, 120, initialTrim));
-      const finalTrim = await getTrim(idx, startFreq, endFreq, "Var");
+      // determine the average dips below target between -3dB points and add bass fill to compensate
+      const baseTrim = await getTrim(idx, 30, 80);
+      const startFreq = Math.round(await getLow3dBPoint(idx, 20, 120, baseTrim));
+      const endFreq = Math.round(await getHigh3dBPoint(idx, 20, 120, baseTrim));
+      const subFreqResponse = await fetchSafe('frequency-response?smoothing=Var&ppo=96', idx);
+      const subArray = response2array(subFreqResponse, startFreq, endFreq);
+      const targetArray = response2array(targetResponse, startFreq, endFreq);
+      const arrayLength = Math.min(subArray.length, targetArray.length);
+      let totalDips = 0;
+      for (let i = 0; i < arrayLength; i++) {
+        totalDips += Math.min((subArray[i] + baseTrim) - targetArray[i], 0);
+      }
+      const dynamicBassFill = Math.round(-2 * (totalDips / arrayLength)) / 2; // round to nearest 0.5
+      if (dynamicBassFill != 0) {
+        console.warn(`***Applying ${dynamicBassFill}dB of bass fill to compensate for dips!***`);
+      }
+      const finalTrim = baseTrim + dynamicBassFill;
       return finalTrim;
     }
     async function alignVol2MLP(indices, mlpIdx) {
